chore: upgrade to gradle 6.8.3
I was not able to execute the integration spec with gradle 4.10.3.