@@ -12,6 +12,9 @@ apply from: 'gradle/artifactory.gradle'
 apply from: 'gradle/code-quality.gradle'
 apply from: 'gradle/code-coverage.gradle'
 
+sourceCompatibility = 8
+targetCompatibility = 8
+
 buildscript {
     repositories {
         jcenter()
@@ -23,7 +26,6 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.1'
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.4.2'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-        classpath 'net.saliman:gradle-cobertura-plugin:2.3.2'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.9"
@@ -39,10 +41,11 @@ dependencies {
     compile localGroovy()
     compile gradleApi()
     compile "org.ajoberstar:gradle-git:1.7.2"
+    compile "com.github.zafarkhaja:java-semver:0.9.0"
+    compile "org.ajoberstar:grgit:1.9.3"
+    compile "com.sun.jersey:jersey-core:1.18.1"
     compile "com.jcabi:jcabi-github:0.28"
-    testCompile 'com.netflix.nebula:nebula-test:4.4.3', {
-        exclude module: 'groovy-all'
-    }
+    testCompile 'com.netflix.nebula:nebula-test:8.1.0'
     testCompile 'org.apache.commons:commons-exec:1.3'
 }
 
@@ -60,6 +63,9 @@ test {
     outputs.dir new File(buildDir, 'nebulatest')
     outputs.dir new File(buildDir, 'test')
     dependsOn cleanTest
+    if (gradle.startParameter.taskNames.find { ['integTest', 'release'].contains(it) })
+        systemProperty 'integTest', 'true'
+    maxHeapSize = '512m'
 }
 
 if (!version.toString().endsWith('-SNAPSHOT'))
@@ -67,9 +73,3 @@ if (!version.toString().endsWith('-SNAPSHOT'))
 else if ((System.getenv('TRAVIS_PULL_REQUEST') ?: "false") == "false")
     publish.dependsOn artifactoryPublish
 
-test {
-    if (gradle.startParameter.taskNames.find { ['integTest', 'release'].contains(it) })
-        systemProperty 'integTest', 'true'
-    maxHeapSize = '512m'
-    jvmArgs '-XX:MaxPermSize=256m'
-}
